# wgsldoc

./: Cargo.toml  Makefile  README.md  clippy.toml  output.txt  test_shader.wgsl
src/: lib.rs  main.rs  wgsl.pest  wgsldoc.pest
src/cli/: mod.rs
src/generator/: mod.rs
src/generator/templates/: base.html.tera  fn.html.tera  index.html.tera  macros.tera  module.html.tera  modules.html.tera  source.html.tera  struct.html.tera
src/model/: import.rs  mod.rs  module.rs  structure.rs  types.rs
src/models/: binding.rs  constant.rs  function.rs  import.rs  mod.rs  structure.rs  types.rs
src/parser/: binding.rs  constant.rs  error.rs  function.rs  import.rs  mod.rs  module.rs  structure.rs  types.rs  wgsldoc.pest
src/utils/: error.rs  html.rs  macros.rs  mod.rs
src/view/: mod.rs
test_shaders/: README.md  aabb.wgsl  another.wgsl  blf.wgsl  blur_shader.wgsl  fxaa_shader.wgsl  main_shader.wgsl  motion_blur.wgsl  noaa_shader.wgsl  ray.wgsl  rt_shader.wgsl  rt_shader_frag.wgsl  taa_shader.wgsl
test_shaders/docs/: index.html
test_shaders/docs/modules/: index.html
test_shaders/docs/modules/aabb/: fn.hit.html  index.html  struct.Aabb.html
test_shaders/docs/modules/another/: fn.calculate_ambient_occlusion.html  fn.cosine_sample_hemisphere.html  fn.fragment.html  fn.get_ray_direction.html  fn.get_ray_direction2.html  fn.get_ray_origin.html  fn.intersectAABB.html  fn.map_blue_noise.html  fn.rand.html  fn.render.html  (+3 more)
test_shaders/docs/source/: aabb.html  another.html  ray.html
test_shaders/rt/: aabb.wgsl  bvh.wgsl  chunk.wgsl  constants.wgsl  obb.wgsl  utils.wgsl  voxel.wgsl
test_shaders/rt/enums/: debug_mode.wgsl  voxel_mat.wgsl
test_shaders/simple/: simple.wgsl
test_shaders/simple/docs/: index.html
test_site/: index.html  index.html.tera
test_site/modules/aabb/: fn.hit.html
tests/: document_tests.rs  error_tests.rs  html_tests.rs  models_tests.rs  parser_tests.rs  rules_parse_tests.rs  types_tests.rs
(+12 files in other folders)
