[package]
name = "wgsldoc"
version = "0.1.0"
edition = "2021"
description = "Documentation generator for WGSL shaders"
keywords = ["wgsl", "docs", "documentation"]
license = "Unlicense"
readme = "README.md"
repository = "https://github.com/konceptosociala/wgsldoc"

[dependencies]
anyhow = "1.0.96"
log = "0.4.27"
markdown = "1.0.0"
pest = { version = "2.7.15", features = ["pretty-print"] }
pest_derive = "2.7.15"
pretty_env_logger = "0.5.0"
tera = "1.20.0"
thiserror = "2.0.11"
