[package]
name = "wgsldoc"
version = "1.0.0"
edition = "2021"
description = "Documentation generator for WGSL shaders"
keywords = ["wgsl", "docs", "documentation"]
license = "Unlicense"
readme = "README.md"
documentation = "https://docs.rs/wgsldoc"
repository = "https://github.com/konceptosociala/wgsldoc"

[dependencies]
anyhow = "1.0.96"
clap = { version = "4.5.40", features = ["derive"] }
fs-err = "=3.1.1"
log = "0.4.27"
markdown = "1.0.0"
pest = { version = "2.7.15", features = ["pretty-print"] }
pest_derive = "2.7.15"
pretty_env_logger = "0.5.0"
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
tera = "1.20.0"
thiserror = "2.0.11"

[dev-dependencies]
tempfile = "3.8"
